--- a/views/form_senha.html
+++ b/views/form_senha.html
@@ -1,7 +1,7 @@
 {% extends "inc/base_usuario.html" %}
 
 {% block title %}Senha da Conta{% endblock %}
-{% block titleheader %}<h1>Senha</h1>{% endblock %}
+{% block titleheader %}<h1>Senha da Conta</h1>{% endblock %}
 
 {% block main %}
 <div class="row">
