--- a/views/page_perfil.html
+++ b/views/page_perfil.html
@@ -1,4 +1,4 @@
-{% extends "inc/base_usuario.html" %}
+{% extends "inc/base_perfil.html" %}
 
 {% block title %}Perfil de {{nome}}{% endblock %}
 {% block titleheader %}{% endblock %}
