--- a/views/inc/base_perfil.html
+++ b/views/inc/base_perfil.html
@@ -14,18 +14,15 @@
 		<link rel="stylesheet" type="text/css" href="{{ static }}/css/triz.css">
         {% endblock %}
     </head>
-    <body class="fixed-body">	
+    <body class="fixed-body-perfil">	
 		{% block body %} 
-			{% include "inc/bar_principal.html" %}
+		
+		{% include "inc/bar_principal.html" %}
+
 
 
 		<div class="container">	
-			<header>	
-						
-						<div class="page-header">
-							{% block titleheader %}Triz{% endblock %}
-						</div>
-					</header>
+			
 			<div class="row">		
 				<div class="col-lg-12">				
 				<main>
