--- a/views/inc/base_projeto.html
+++ b/views/inc/base_projeto.html
@@ -16,52 +16,7 @@
     </head>
     <body class="fixed-body" style="background-color:white">	
 		{% block body %} 
-		<nav class="navbar navbar-default navbar-fixed-top" style="background-color:white">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a href="/" class="navbar-brand"><img class="logo" alt="Triz" src="{{ static }}/img/marca/logo_256.png" height="20" width="20"></a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="/">Mural</a></li>        
-		<li><a href="/perfil">Perfil</a></li>        
-		<li><a href="/projeto">Projetos</a></li>        
-	
-      </ul>
-      
-      <ul class="nav navbar-nav navbar-right">
-        
-		<li class="dropdown">		
-		<a class="dropdown-toggle" data-toggle="dropdown" href="#" style="height:50px;">	
-			<!--<span class="img-circle" style="background:#fdcc52 url({{ducs}}/usuario/perfil/{{ss.imagem}}.{{ss.ext_imagem}});background-position:center;background-repeat:no-repeat;background-size:auto 24px;height:24px;width:24px;display:inline-block"></span>-->
-			<strong>{{ ss.nome }}</strong>		
-			<span class="caret"></span>
-		</a>
-		<ul class="dropdown-menu dropdown-user">			
-			<li class="dropdown-header">Ajustes</li>
-			<li><a href="/perfil/editar">Perfil</a></li>
-			<li><a href="/conta">Conta</a></li>
-			<li class="dropdown-header">Segurança</li>
-			<li><a href="/perfil">Senha</a></li>
-			<li><a href="/conta/acesso">Acessos</a></li>
-			<li class="divider"></li>
-			<li><a href="/sair">Sair do Triz</a></li>
-		</ul>		
-	</li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->  
- 
-</nav>
+		{% include "inc/bar_principal.html" %}
 
 
 <div class="container-fluid rose">
