--- a/views/page_projeto_todos.html
+++ b/views/page_projeto_todos.html
@@ -32,7 +32,7 @@
 	<div class="col-lg-11">
     <div class="media-left">
       <a href="/projeto/{{p.dominio}}">
-		<span class="media-object" src="..." alt="..." style="background-color: #feeab9; background-image: url({{ducs}}/projeto/perfil/{{ss.imagem}}.{{ss.ext_imagem}}), url({{static}}/img/projeto_64.png);background-position:center;background-repeat:no-repeat;background-size:auto 64px;height:64px;width:64px;">
+		<span class="media-object" style="background-color: #feeab9; background-image: url({{ducs}}/projeto/perfil/{{ss.imagem}}.{{ss.ext_imagem}}), url({{static}}/img/projeto_64.png);background-position:center;background-repeat:no-repeat;background-size:auto 64px;height:64px;width:64px;">
       </a>
     </div>
     <div class="media-body">
