--- a/views/page_mural.html
+++ b/views/page_mural.html
@@ -3,5 +3,29 @@
 {% block title %}Mural{% endblock %}
 
 {% block main %}
+<div class="container">
+	<div class="row">
+		<div class="col-lg-4">
+		
+		</div>
+		<div class="col-lg-4">
+		
+		</div>
+		<div class="col-lg-4">
+			
+			<div class="list-group">
+				{% for c in cs %}
+			  <div class="list-group-item">
+				<h4 class="list-group-item-heading">{{c.titulo}}</h4>
+				<p class="list-group-item-text"><small class="text-muted">Enviado em {{c.ts_realizacao|date("d/m/Y \\à\\s H:i")}} por <a href="/perfil/{{c.id_conta_usuario}}" target="_blank"> {{c.nome}} {{c.sobrenome}}</a></small></p>
+				<p class="list-group-item-text">{{c.resumo}}</p>
+				<p class="list-group-item-text"><a href="/projeto/{{c.dominio}}/membros/convite/aceitar" class="btn btn-success active btn-xs">Aceitar</a> <a href="/projeto/{{c.dominio}}/membros/convite/recusar" class="btn btn-danger active btn-xs">Recusar</a></p>
+			  </div>
+				{% endfor %}
+			</div>
+			
+		</div>
+	</div>
+</div>
 
 {% endblock %}
