--- a/views/page_mural.html
+++ b/views/page_mural.html
@@ -17,7 +17,7 @@
 				{% for c in cs %}
 			  <div class="list-group-item">
 				<h4 class="list-group-item-heading">{{c.titulo}}</h4>
-				<p class="list-group-item-text"><small class="text-muted">Enviado em {{c.ts_realizacao|date("d/m/Y \\à\\s H:i")}} por <a href="/perfil/{{c.id_conta_usuario}}" target="_blank"> {{c.nome}} {{c.sobrenome}}</a></small></p>
+				<p class="list-group-item-text"><small class="text-muted">Enviado em {{c.ts_realizacao|date("d/m/Y \\à\\s H:i")}} por <a href="/perfil/{{c.id_conta_usuario}}" target="_blank"> {{c.nome}}</a></small></p>
 				<p class="list-group-item-text">{{c.resumo}}</p>
 				<p class="list-group-item-text"><a href="/projeto/{{c.dominio}}/membros/convite/aceitar" class="btn btn-success active btn-xs">Aceitar</a> <a href="/projeto/{{c.dominio}}/membros/convite/recusar" class="btn btn-danger active btn-xs">Recusar</a></p>
 			  </div>
