--- a/views/page_mural.html
+++ b/views/page_mural.html
@@ -2,6 +2,12 @@
 
 {% block title %}Mural{% endblock %}
 
+{% block titleheader %}
+
+<h1 style="display:inline;margin-right:20px">Mural</h1>
+
+{% endblock %}
+
 {% block main %}
 <div class="container">
 	<div class="row">
