--- a/views/page_projeto_d_membros.html
+++ b/views/page_projeto_d_membros.html
@@ -30,7 +30,7 @@
 						  <a href="/projeto/{{p.dominio}}/membros/papeis/1/selecionar" class="list-group-item">
 							{% if po is empty %}
 							<p><div class="img-circle" style="background-color:#feeab9; background-image:url({{static}}/img/usuario_128.png);background-position:center;background-repeat:no-repeat;background-size:auto 128px;height:128px;width:128px;display:inline-block"></div></p>
-							<h4 class="list-group-item-heading">Selecionar</h4>	
+							<h4 class="list-group-item-heading"><span class="text-muted">Selecionar</span></h4>	
 							{% else %}
 							<p><div class="img-circle" style="background-color:#feeab9; background-image: url({{ducs}}/usuario/perfil/{{po.imagem}}.{{po.ext_imagem}}), url({{static}}/img/usuario_128.png);background-position:center;background-repeat:no-repeat;background-size:auto 128px;height:128px;width:128px;display:inline-block"></div></p>
 							<h4 class="list-group-item-heading">{{po.nome}}</h4>	
@@ -48,7 +48,7 @@
 						  <a href="/projeto/{{p.dominio}}/membros/papeis/2/selecionar" class="list-group-item">
 							{% if sm is empty %}
 							<p><div class="img-circle" style="background-color:#feeab9; background-image:url({{static}}/img/usuario_128.png);background-position:center;background-repeat:no-repeat;background-size:auto 128px;height:128px;width:128px;display:inline-block"></div></p>
-							<h4 class="list-group-item-heading">Selecionar</h4>	
+							<h4 class="list-group-item-heading"><span class="text-muted">Selecionar</span></h4>	
 							{% else %}
 							<p><div class="img-circle" style="background-color:#feeab9; background-image: url({{ducs}}/usuario/perfil/{{sm.imagem}}.{{sm.ext_imagem}}), url({{static}}/img/usuario_128.png);background-position:center;background-repeat:no-repeat;background-size:auto 128px;height:128px;width:128px;display:inline-block"></div></p>
 							<h4 class="list-group-item-heading">{{sm.nome}}</h4>	
