--- a/views/page_projeto_todos.html
+++ b/views/page_projeto_todos.html
@@ -5,7 +5,7 @@
 
 <h1 style="display:inline;margin-right:20px">Projetos</h1>
 <a href="/projeto/criar" class="btn black"><img src="{{ static }}/img/adicionar_64.png" height="20" width="20"> Criar novo</a>
-<a href="criar" class="btn black"><img src="{{ static }}/img/pesquisar_64.png" height="20" width="20"> Pesquisar outros projetos</a>
+<!--<a href="criar" class="btn black"><img src="{{ static }}/img/pesquisar_64.png" height="20" width="20"> Pesquisar outros projetos</a>-->
 
 {% endblock %}
 
