Criação do sistema para recuperação de senha de usuário

--- a/views/dev/page_inicio.html
+++ b/views/dev/page_inicio.html
@@ -5,6 +5,9 @@
 
 {% block main %}
 	<nav>
-		<a href="chaves">Chaves de Ativação</a>	
+		<ul class="nav nav-pills">
+		  <li role="presentation"><a href="chaves">Chaves de Ativação</a></li>
+		  <li role="presentation"><a href="recuperacao">Chaves de Recuperação</a></li>
+		</ul>				
 	</nav>	
 {% endblock %}
