--- a/views/form_recuperar_senha.html
+++ b/views/form_recuperar_senha.html
@@ -11,32 +11,28 @@
 			<div class="login-panel panel panel-none">			
 				<div class="panel-heading text-center">					
 					<a href="/"><img src="{{ static }}/img/marca/logo_256.png" alt="Triz" style="widht:64px;height:64"></a>
-					<h3>Entre em sua conta Triz</h3>		
+					<h3>Recuperação de Senha</h3>		
 				</div>
 				<div class="panel-body">
-					{% if erros is defined %}
-					<div class="alert alert-danger text-center" role="alert">
-						<strong>{{ erros.0 }}</strong>		
+					{% if msg is not empty %}
+					<div class="alert alert-{{t}} text-center" role="alert">
+						<strong>{{ msg }}</strong>		
 					</div>
-					{% endif %}
-					<form method="POST" action="/entrar" role="form">
+					{% endif %}				
+					{% if msg is empty %}
+					<form method="POST" action="/conta/recuperar/senha" role="form">
 						<fieldset>
 							<div class="form-group">
 								<input type="email" name="email" id="email" placeholder="E-mail" required autofocus class="form-control">							
-							</div>
-							<div class="form-group">
-								<input type="password" name="senha" id="senha" placeholder="Senha" required class="form-control">								
-							</div>												
-							<input type="submit" id="entrar" value="Entrar no Triz" class="btn btn-lg btn-error btn-block rose" style="outline:none">  
+							</div>																		
+							<input type="submit" id="entrar" value="Entrar no Triz" class="btn btn-error btn-block rose" style="outline:none">  
 						</fieldset>						
 					</form>
+					{% endif %}
 				</div>				
 				<p class="text-center">
-					Novo por aqui? <a href="/conta/criar">Crie uma conta</a>
-				</p>
-				<p class="text-center">
-					<a href="/conta/recuperar/senha">Esqueci minha senha
-				</p>
+					<a href="/entrar">Entrar no Triz</a>
+				</p>				
 			</div>				
 			<p class="text-center copyright text-muted small">
 				<small>&copy {{ "now"|date("Y") }} Triz MPS. Todos os direitos reservados.</small>
