Criação do sistema de categorização de projeto por tag

--- a/views/page_projeto_d_configuracoes.html
+++ b/views/page_projeto_d_configuracoes.html
@@ -22,6 +22,7 @@
 	<div class="col-lg-2" style="background-color:#fbfbfb;border-right: 1px solid #eee;">
 		<ul class="nav nav-pills nav-stacked">
 		  <li role="presentation"><a href="/projeto/{{p.dominio}}/configuracoes">Sobre</a></li>
+		  <li role="presentation"><a href="/projeto/{{p.dominio}}/configuracoes/identidade">Identidade</a></li>
 		  <li role="presentation"><a href="/projeto/{{p.dominio}}/configuracoes/visibilidade">Visibilidade</a></li>
 		  <li role="presentation"><a href="/projeto/{{p.dominio}}/configuracoes/desativacao">Desativação</a></li>
 		  <li role="presentation"><a href="/projeto/{{p.dominio}}/configuracoes/cancelamento">Cancelamento</a></li>		  
