--- a/views/page_projeto_d_geral.html
+++ b/views/page_projeto_d_geral.html
@@ -1,13 +1,13 @@
 {% extends "inc/base_projeto.html" %}
 
-{% block title %}Membros{% endblock %}
+{% block title %}{{p.titulo}}{% endblock %}
 
 {% block main %}
 <div class="row">	
 	<div class="col-lg-12">	
 		<div class="panel panel-default">
-		  <div class="panel-body">
-			{{p.resumo}}
+		  <div class="panel-body">			
+			
 		  </div>
 		</div>
 	</div>	
