--- a/views/page_mural.html
+++ b/views/page_mural.html
@@ -13,6 +13,29 @@
 	<div class="row">
 		<div class="col-lg-4">
 			<strong>Notificações</strong>
+			<div class="list-group">
+				{% for r in res %}
+			  <a href="/projeto/{{r.dominio}}/releases#{{r.dt_entrega|date('d-m-Y')}}" class="list-group-item list-group-item-danger">
+				<h4 class="list-group-item-heading">Release do <span class="text-uppercase">{{r.dominio}}</span> para hoje <small>{#({{r.dt_entrega|date("d/m/Y")}})#}</small></h4>
+				<p class="list-group-item-text">{{r.titulo}}</p>	
+			  </a>
+				{% endfor %}
+				{% if cs is not empty %}
+			<a href="" class="list-group-item list-group-item-info">
+				<h4 class="list-group-item-heading">Você tem novos convites</h4>
+				<p class="list-group-item-text">Observe a seção de convites</p>	
+			  </a>
+				{% endif %}
+			</div>
+			<strong>Tarefas em andamento</strong>
+			<div class="list-group">
+				{% for p in ps %}
+			  <a href="/projeto/{{p.dominio}}" class="list-group-item">
+				<h4 class="list-group-item-heading">{{p.titulo}}</h4>				
+				<p class="list-group-item-text">{{p.resumo}}</p>				
+			  </a>
+				{% endfor %}
+			</div>
 		</div>
 		<div class="col-lg-4">
 			<strong>Projetos que você participa</strong>
@@ -39,7 +62,7 @@
 			<div class="list-group">
 				{% for c in cs %}
 			  <div class="list-group-item">
-				<h4 class="list-group-item-heading">{{c.titulo}}</h4>
+				<h4 class="list-group-item-heading"><a href="/projeto/{{c.dominio}}" target="_blank">{{c.titulo}}</a></h4>
 				<p class="list-group-item-text"><small class="text-muted">Enviado em {{c.ts_realizacao|date("d/m/Y \\à\\s H:i")}} por <a href="/perfil/{{c.id_conta_usuario}}" target="_blank"> {{c.nome}}</a></small></p>
 				<p class="list-group-item-text">{{c.resumo}}</p>
 				<p class="list-group-item-text"><a href="/projeto/{{c.dominio}}/membros/convite/aceitar" class="btn btn-success active btn-xs">Aceitar</a> <a href="/projeto/{{c.dominio}}/membros/convite/recusar" class="btn btn-danger active btn-xs">Recusar</a></p>
