Ajustes na interface gráfica e implementação de funcionalidades para entrega

--- a/views/form_projeto_d_releases_criar.html
+++ b/views/form_projeto_d_releases_criar.html
@@ -7,9 +7,16 @@
 
 
 {% block main %}
+<div class="row">
+	<div class="col-lg-12">
+		<div class="page-header">
+			<h4 style="display:inline;margin-right:20px"><strong>Releases</strong></h4>			
+		</div>
+	</div>
+</div>
 <div class="row">	
 	<div class="col-lg-6">
-		<h3>Criar novo projeto</h3>
+		<h4><strong>Criar nova release</strong></h4>
 		<form method="POST" action="criar">
 
 			<div class="form-group">			
