--- a/views/page_projeto_d_geral.html
+++ b/views/page_projeto_d_geral.html
@@ -3,11 +3,48 @@
 {% block title %}{{p.titulo}}{% endblock %}
 
 {% block main %}
-<div class="row">	
-	<div class="col-lg-12">	
+<div class="row" style="margin-top:30px">	
+	<div class="col-lg-3">	
 		<div class="panel panel-default">
-		  <div class="panel-body">			
-			
+		  <div class="panel-body">
+			<div class="text-center">
+				<img src="{{static}}/img/membros.png" height="128px" width="128px">				
+				<p class="lead text-uppercase">Membros</p>
+				<h1><strong>{{m}}</strong></h1>
+			</div>
+		  </div>
+		</div>
+	</div>	
+	<div class="col-lg-3">	
+		<div class="panel panel-default">
+		  <div class="panel-body">
+			<div class="text-center">
+				<img src="{{static}}/img/historias.png" height="128px" width="128px">				
+				<p class="lead text-uppercase">Histórias</p>
+				<h1><strong>{{h}}</strong></h1>
+			</div>
+		  </div>
+		</div>
+	</div>	
+	<div class="col-lg-3">	
+		<div class="panel panel-default">
+		  <div class="panel-body">
+			<div class="text-center">
+				<img src="{{static}}/img/sprints.png" height="128px" width="128px">				
+				<p class="lead text-uppercase">Sprints</p>
+				<h1><strong>{{s}}</strong></h1>
+			</div>
+		  </div>
+		</div>
+	</div>	
+	<div class="col-lg-3">	
+		<div class="panel panel-default">
+		  <div class="panel-body">
+			<div class="text-center">
+				<img src="{{static}}/img/releases.png" height="128px" width="128px">				
+				<p class="lead text-uppercase">Releases</p>
+				<h1><strong>{{r}}</strong></h1>
+			</div>
 		  </div>
 		</div>
 	</div>	
