--- a/views/page_projeto_d_relatorios.html
+++ b/views/page_projeto_d_relatorios.html
@@ -17,21 +17,21 @@
 <div class="row">	
 	<div class="col-lg-12">	
 		<div class="list-group">
-		  <a href="/projeto/{{p.dominio}}/relatorios/status" target="_blank" class="list-group-item">
+		  <a href="/projeto/{{p.dominio}}/relatorios/sobre" target="_blank" class="list-group-item">
 			<p><img src="{{ static }}/img/status_proj_64.png" height="64px" width="64px"></p>
-			<h4 class="list-group-item-heading">Status do Projeto</h4>
-			<p class="list-group-item-text">Visão resumida da situação do projeto até o dia corrente</p>
+			<h4 class="list-group-item-heading">Sobre o Projeto</h4>
+			<p class="list-group-item-text">Visão resumida sobre o objetivo do projeto</p>
 		  </a>
 		</div>
 		<div class="list-group">
-		  <a href="/projeto/{{p.dominio}}/relatorios/especificacao" target="_blank" class="list-group-item">
+		  <a href="/projeto/{{p.dominio}}/relatorios" target="_blank" class="list-group-item disabled">
 			<p><img src="{{ static }}/img/especificacao_funcional_64.png" height="64px" width="64px"></p>
 			<h4 class="list-group-item-heading">Especificação Funcional</h4>
 			<p class="list-group-item-text">Listagem das funcionalidades que compõe o produto</p>
 		  </a>
 		</div>
 		<div class="list-group">
-		  <a href="/projeto/{{p.dominio}}/relatorios/geral" target="_blank" class="list-group-item">
+		  <a href="/projeto/{{p.dominio}}/relatorios" class="list-group-item disabled">
 			<p><img src="{{ static }}/img/relatorio_geral_64.png" height="64px" width="64px"></p>
 			<h4 class="list-group-item-heading">Relatório Geral Completo</h4>
 			<p class="list-group-item-text">Descrição completa das seções que compõe o projeto</p>
